syntax = "proto3";

import "meta/header.proto";
import "user/role.proto";

option go_package = "github.com/ilyatos/aac-task-tracker/schema_registry/pkg/user/user_updated";

package user_updated;

message UserUpdated {
  header.Header header = 1;
  oneof payload {
    V1 v1 = 2;
  }
}

message V1 {
  string public_id = 1;
  string name = 2;
  string email = 3;
  user.Role role = 4;
}
